--- a/Web/login.css
+++ b/Web/login.css
@@ -2,7 +2,7 @@
 background-color: #0b142f;
 color:#FFF;
 width: 100%;
-height: 163px ;
+height: 163px;
 }
 
 #logo {
@@ -24,7 +24,15 @@ height: 163px ;
     border-radius: 5px ;
 }
 
-#background {
-width:100%;
+.banner {
+    height: 100vh;
+    width: 100%;
+    background: url(./assets/images/pexels-photoscom-93398.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    overflow: auto;
+    border-top: 1px solid;
 
 }
+    
