Ajustando menu-login

--- a/Web/Login-usuario.css
+++ b/Web/Login-usuario.css
@@ -31,16 +31,24 @@ padding-top: 85px;
  display: flex;
 }
 
-.container{
-    display:flex;
-    justify-content: center;
-}
 
 .menu-login {
     border-radius: 15px;
     max-width: 25%;
-
+    background-color: red;
   
+}
+.corpo{ display: flex;
+    align-items: center;
+    justify-content: center;
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background-color: rgba(0, 0,0,.5);
+    
+
 }
 
 
