--- a/Web/Login-usuario.css
+++ b/Web/Login-usuario.css
@@ -35,7 +35,7 @@ padding-top: 85px;
 .menu-login {
     border-radius: 15px;
     max-width: 25%;
-    background-color: red;
+    background-color: #fff;
   
 }
 .corpo{ display: flex;
