Recuperação de senha incrementado

--- a/Web/Login-usuario.css
+++ b/Web/Login-usuario.css
@@ -51,4 +51,10 @@ padding-top: 85px;
 
 }
 
+.controlador-login {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
 
