--- a/Web/sobre.css
+++ b/Web/sobre.css
@@ -1,43 +1,12 @@
-#header {
-background-color: #0b142f;
-color:#FFF;
-width: 100%;
-height: 163px;
-}
-
-#logo {
-    width: 350px;
-    padding-top: 5px ;
-}
-
-.menu {
-    padding-top: 85px;
-}
-
-.menu a {
-    padding: 5px;
-}
-
-.menu-list {
-    transform:rotate(90deg);
-    cursor: pointer;
-}
-
-.active {
-    background-color: orangered;
-    border-radius: 5px ;
-}
-
 .banner {
     height: 100vh;
     width: 100%;
-    background: url(./assets/images/pexels-photoscom-93398.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom;
     overflow: auto;
     border-top: 1px solid;
+}
 
+.menu-list {
+    position: relative;
 }
 
 #background-sofa {
@@ -47,4 +16,11 @@ height: 163px;
     background-repeat: no-repeat;
     height: auto;
     width: auto;
+}
+
+#background-bottom {
+    background: url(./assets/images/Sobre-1.jpg);
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: 70%;
 }
