--- a/Web/Login-usuario.css
+++ b/Web/Login-usuario.css
@@ -52,9 +52,13 @@ padding-top: 85px;
 }
 
 .controlador-login {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
+    padding: 35px;
 }
 
+.menu-list {
+    position: relative;
+}
+
+.controlador-login input {
+    padding: 20px;
+}
