--- a/Web/sobre.css
+++ b/Web/sobre.css
@@ -9,18 +9,32 @@
     position: relative;
 }
 
-#background-sofa {
-    background: url(./assets/images/Sobre-2.jpg);
-    background-size: 180%;
-    background-position-x: 80%;
+.background-image {
+    background: url(./assets/images/Sobre-3.jpg);
+    background-size: cover;
+    width: 95%;
     background-repeat: no-repeat;
-    height: auto;
-    width: auto;
+    background-position-y: 70%;
+    background-position-x: 50%;
+    border: 1px solid;
+}
+
+.texto {
+    text-align: center;
+}
+
+#quote-center {
+    text-align: center;
 }
 
 #background-bottom {
+    border: 1px solid;
     background: url(./assets/images/Sobre-1.jpg);
-    background-position: left;
+    width: 95%;
+    height: 600px;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: 70%;
+    background-position-x: 70%;
+    background-position-y: 50%;
+
 }
