--- a/Web/login.css
+++ b/Web/login.css
@@ -1,13 +1,18 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(./assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
+
 #header {
-background-color: #0b142f;
-color:#FFF;
-width: 100%;
-height: 163px;
+    background-color: #0b142f;
+    color: #FFF;
+    width: 100%;
+    height: 163px;
 }
 
 #logo {
     width: 350px;
-    padding-top: 5px ;
+    padding-top: 5px;
 }
 
 .menu {
@@ -19,9 +24,8 @@ height: 163px;
 }
 
 .active {
-    
-    background-color: orangered;
-    border-radius: 5px ;
+    background-color: #E53420;
+    border-radius: 5px;
 }
 
 .banner {
@@ -33,11 +37,63 @@ height: 163px;
     background-position: bottom;
     overflow: auto;
     border-top: 1px solid;
+} 
 
+.my-28 {
+    width: 422px;
+    height: 531px;
+    background-color: #FFF;
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 344px 0 344px;
+    padding: 20px 50px 20px 50px;
 }
 
-#btn-cadastrar {
-    background-color: orangered;
-    width: 200px;
+#title-cadastro {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
 
+.button {
+    background-color: #E53420;
+    color: #FFF;
+    width: 322px;
+    height: 50px;
+    border-radius: 5px;
+    font-size: large;
+    font-weight: bold;
+    align-items: center;
+    text-align: center;
+}
+
+#button-continuar {
+    padding: 10px;
+    margin: 20px 0 15px 0;
+}
+
+    
+.checkbox_class {
+    margin: 5px 5px 5px 0;
+}
+
+.info-boxes-login input {
+    width: 322px;
+    height: 59px;
+    border-radius: 5px;
+    border: 1px solid #bbb;
+    background-color: #F5F5F5;
+    padding: 0 10px;
+    margin: 15px;
+    margin-left: 0;
+}
+
+.my-28 label {
+    font-family: "Montserrat";
+    font-size: 18px;
+    border-style: solid;
+    color: #000;
 }
