--- a/Web/css/login.css
+++ b/Web/css/login.css
@@ -1,37 +1,12 @@
 @font-face {
     font-family: "Montserrat";
-    src: url(./assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
-}
-
-#header {
-    background-color: #0b142f;
-    color: #FFF;
-    width: 100%;
-    height: 163px;
-}
-
-#logo {
-    width: 350px;
-    padding-top: 5px;
-}
-
-.menu {
-    padding-top: 85px;
-}
-
-.menu a {
-    padding: 5px;
-}
-
-.active {
-    background-color: #E53420;
-    border-radius: 5px;
+    src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
 .banner {
     height: 100vh;
     width: 100%;
-    background: url(./assets/images/pexels-photoscom-93398.jpg);
+    background: url(../assets/images/pexels-photoscom-93398.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
