--- a/Web/Login-usuario.css
+++ b/Web/Login-usuario.css
@@ -19,7 +19,6 @@ padding-top: 85px;
 .menu a {
     padding: 5px;
 
-
 }
 
 
@@ -36,6 +35,7 @@ padding-top: 85px;
     border-radius: 15px;
     max-width: 25%;
     background-color: #fff;
+    margin-top: 0px;
   
 }
 .corpo{ display: flex;
@@ -47,12 +47,14 @@ padding-top: 85px;
     left:0;
     right:0;
     background-color: rgba(0, 0,0,.5);
+
     
 
 }
 
 .controlador-login {
-    padding: 35px;
+    padding: 15px;
+    margin-bottom: 15px;
 }
 
 .menu-list {
@@ -61,19 +63,43 @@ padding-top: 85px;
 
 .controlador-login input {
     padding: 25px;
+    margin-top: 10px;
 }
 
 .input-senha {
     display:flex;
+    
 }
  #btn-logar {
+    display: flex;
     width: 150px;
     height: 50px;
     border-radius: 10px;
     justify-content: center;
     margin-left: 150px;
+    padding-top: 10px;
     background-color: #e54320;
     border: 1px solid black;
- 
-   
+}
+
+
+#btn-cadastrar {
+   display: flex;
+   width: 150px;
+   height: 50px;
+   border-radius: 10px;
+   justify-content: center;
+   margin-left: 150px;
+   margin-top: 20px;
+   padding-top: 10px;
+   background-color: #e54320;
+   border: 1px solid black;
+
+}
+
+.input-login {
+    margin: 0px;
+}
+.texto-cadastro {
+    margin-left: 150px;
 }
