estetica dos nomes

--- a/Web/css/Suporte.css
+++ b/Web/css/Suporte.css
@@ -50,7 +50,7 @@
     margin: 5px 5px 5px 0;
 }
 
-.info-boxes-login input {
+.info-boxes-suporte input {
     width: 322px;
     height: 59px;
     border-radius: 5px;
