--- a/Web/css/Suporte.css
+++ b/Web/css/Suporte.css
@@ -1,7 +1,7 @@
 .banner {
     min-height: 100vh;
     width: 100%;
-    background: url(../assets/images/bg-suporte-md.jpg);
+    background: url(../assets/images/bg-suporte-md);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -99,4 +99,15 @@ body {
 .my-28 a {
     text-decoration: none;
     color: #fff;
+}
+
+@media (min-width: 768px) {
+    .banner{
+        background: url(../assets/images/bg-suporte-md.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        overflow: auto;
+        border-top: 1px solid;
+    } 
 }
