--- a/Web/css/Suporte.css
+++ b/Web/css/Suporte.css
@@ -74,7 +74,10 @@ body {
     padding: 0;
 }
 
-.Formulario {
+.FormularioSuporte {
+    display: grid;
+    grid-template-columns: 3fr; 
+    grid-template-rows: auto; 
     position: fixed;
     left: 98px;
     top: 100px;
@@ -84,6 +87,14 @@ body {
     color: #fff;
     padding: 20px;
     box-sizing: border-box;
+    border-radius: 10px; 
+    margin-top: 7rem;
+}
+
+.FormularioSuporte input {
+    width: 100%; 
+    margin-bottom: 10px; 
+    color: #000;
 }
 
 .Formulario ul {
