--- a/Web/css/header.css
+++ b/Web/css/header.css
@@ -48,6 +48,11 @@
 }
 
 @media (max-width: 970px) {
+
+    #logo {
+        display: none;
+    }
+
     .menu-desktop {
         display: none;
     }
