--- a/Web/css/sobre.css
+++ b/Web/css/sobre.css
@@ -9,7 +9,7 @@
 }
 
 .background-image {
-    background: url(./assets/images/Sobre-3.jpg);
+    background: url(../assets/images/Sobre-3.jpg);
     background-size: cover;
     width: 95%;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@
 
 #background-bottom {
     border: 1px solid;
-    background: url(./assets/images/Sobre-1.jpg);
+    background: url(../assets/images/Sobre-1.jpg);
     width: 95%;
     height: 600px;
     background-size: cover;
@@ -37,16 +37,13 @@
     background-position-y: 50%;
 }
 
-@media (max-width:800px), handheld {
+@media (max-width:700px) {
     .background-image {
-        background: url(./assets/images/Sobre-4.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position-x: 70%;
+        display: none;
     }
 
     #background-bottom {
-        background: url(./assets/images/Sobre-2.jpg);
+        background: url(../assets/images/Sobre-2.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position-x: 70%;
