--- a/Web/css/cadastro.css
+++ b/Web/css/cadastro.css
@@ -25,39 +25,25 @@
     align-items:center;
 }
 
-.box-cadastrar-continuar {
+.box {
     width: 422px;
     height: 531px;
     background-color: #FFF;
     border-radius: 10px;
     flex-direction: column;
     padding: 20px 50px 20px 50px;   
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-#title-cadastro {
+#box-finalizar-cadastro {
+    display:none;
+    padding-top: 30px;
+}
+
+#title-box {
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 20px;
-}
-
-.button {
-    background-color: #E53420;
-    color: #FFF;
-    border-radius: 5px;
-    font-weight: bold;
-    margin: 20px 0 15px 0;
-}
-
-.button-continuar {
-    width: 322px;
-    height: 50px;
-    font-size: large;
-}
-
-.checkbox_class {
-    margin: 5px 5px 5px 0;
 }
 
 .info-boxes-cadastro input {
@@ -71,9 +57,58 @@
     margin-left: 0;
 }
 
-.box-cadastrar-continuar label {
-    font-family: "Montserrat";
-    font-size: 18px;
-    border-style: solid;
-    color: #000;
+button {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#button-continuar {
+    background-color: #E53420;
+    color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 27px;
+}
+
+.button-container {
+    display: flex;
+}
+
+#button-voltar {
+    width: 15%;
+    background-color: #E53420;
+    color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 30px;
+    margin-right: 5px;
+}
+
+#button-cadastrar {
+    width: 85%;
+    background-color: #E53420;
+    color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 30px;
+    margin-left: 5px;
+}
+
+.button-continuar {
+    width: 322px;
+    height: 50px;
+    font-size: large;
+}
+
+.checkbox_class {
+    margin: 18px 0px 5px 0;
 }
