--- a/Web/css/Login-usuario.css
+++ b/Web/css/Login-usuario.css
@@ -1,38 +1,14 @@
-body {
-    margin: 0;
-    padding: 0;
-}
 
-.banner2 {
-    background: url(../assets/images/Imagem-login.jpeg);
-    width: 100vw;
-    height: 100vh;
-}
-
-.menu-login {
-    border-radius: 15px; 
-    background-color: #fff;
-    margin-top: 0px;
-    display: flex;
-    flex-direction: column;
-    width: 450px;
-    height: 450px;
-  
-}
-
-.corpo { 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-
+.banner {
+ background: url(../assets/images/Imagem-login.jpeg);
+ width: 100vw;
+ height: 100vh;
+ background-size: cover;
+ display: flex;
 }
 
 .controlador-login {
+    height: 175px;
     padding: 15px;
     margin-bottom: 15px;
 }
@@ -57,36 +33,61 @@ body {
     height: 50px;
     border-radius: 10px;
     justify-content: center;
-    margin-left: 150px;
+    margin-left: 130px;
     padding-top: 10px;
     background-color: #e54320;
     border: 1px solid black;
 }
+.botao {
+padding-bottom: 25px;
 
+}
 #btn-cadastrar {
    display: flex;
    width: 150px;
    height: 50px;
    border-radius: 10px;
    justify-content: center;
-   margin-left: 150px;
+   margin-left: 130px;
    margin-top: 20px;
    padding-top: 10px;
    background-color: #e54320;
    border: 1px solid black;
 
 }
+
+.input-login {
+    margin: 0px;
+}
 .texto-cadastro {
     margin-left: 150px;
 }
 
 .campos {
-    border: 1px solid #e54320;
     width: 100%;
     align-items:center;
     justify-content: center;
 }
 
+.campos span, checkbox {
+    padding-right: 75px;
+}
+
+.corpo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    background-color: rgba(0, 0,0,.5);
+}
+
+.texto-cadastro{
+    padding-right: 15px;
+}
 @media only screen and (max-width: 768px) {
   .banner {
     background-size: 150%;
