--- a/Web/css/faq.css
+++ b/Web/css/faq.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
+
 .banner {
     min-height: 100vh;
     width: 100%;
