--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
+
 .banner {
     height: 100vh;
     width: 100%;
@@ -15,6 +20,48 @@
     text-shadow: 0 0 6px #000;
     text-transform: uppercase;
     font-weight: bold;
+    
+}
+
+#buscar-opc {
+    color: white;
+    background-color: orangered;
+    width: 120px;
+    height: 60px;
+    border-radius: 15px;
+    font-weight: 500;
+}
+
+.agendar-form {
+    background-color: rgba(189, 189, 189, 0.801);
+    margin: 50px;
+    padding: 15px 0 15px 0;
+    border-radius: 15px;   
+}
+
+.inputs {
+    gap: 18px;
+    align-items: center;
+}
+
+#estado-uf {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    font-weight: 620;
+}
+
+.inputs input {
+    font-weight: 500;
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    padding: 8px;
+    margin-left: 20px;
+}
+
+.agendar-form label {
+    font-weight: 700;
 }
 
 @media (min-width: 768px) {
@@ -25,5 +72,28 @@
         background-position: bottom;
         overflow: auto;
         border-top: 1px solid;
-    } 
+    }
+
+    .agendar-form {
+        align-content: space-between;
+    }
+    .inputs {
+        padding-left: 20px;
+    }
+
+    .inputs input {
+        width: 300px;
+        padding-top: 10px;
+    }
+
+    #buscar-opc {
+        width: 200px;
+    }
+
+}
+
+@media (max-width: 768px) {
+    .texto{
+        display: flex;
+    }
 }
