--- a/Web/css/Suporte.css
+++ b/Web/css/Suporte.css
@@ -1,92 +1,123 @@
-body {
-    margin: 0;
-    padding: 0;
-    
+@font-face {
+    font-family: "Montserrat";
+    src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
-#btn-cadastrar {
+
+.banner {
+    height: 100vh;
+    width: 100%;
+    background: url(../assets/images/pexels-photoscom-93398.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    overflow: auto;
+    border-top: 1px solid;
+    height: 100vh;
+    width: 100vw;
+}
+
+.container-suporte {
+    display: flex;
+    height: (100vh - 163px);
+    margin-top: 140px;
+    width: 100vw;
+    justify-content:center;
+    align-items:center;
+}
+
+.box {
+    width: 422px;
+    height: 531px;
+    background-color: #FFF;
+    border-radius: 10px;
+    flex-direction: column;
+    padding: 20px 50px 20px 50px;   
+}
+
+#box-continuar-suporte {
+    height: 405px;
+}
+
+#box-finalizar-suporte {
+    display: none;
+    padding-top: 28px;
+}
+
+#title-box {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+.info-boxes-suporte input {
+    width: 322px;
+    height: 59px;
+    border-radius: 5px;
+    border: 1px solid #bbb;
+    background-color: #F5F5F5;
+    padding: 0 10px;
+    margin: 15px;
+    margin-left: 0;
+}
+
+#descricao-suporte input {
+    height: 220px;
+}
+
+button {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#button-continuar {
     background-color: #E53420;
     color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 27px;
+}
+
+.button-continuar {
     width: 322px;
     height: 50px;
-    margin: 15px 0 15px 0;
-    border-radius: 5px;
     font-size: large;
-    font-weight: bold;
-    text-align: center;
 }
 
-.Formulario label {
-    font-family: "Montserrat";
-    font-size: 18px;
-    border-style: solid;
-    color: #f1eaea;
-}
-
-.FormularioSuporte {
-    display: grid;
-    grid-template-columns: 3fr; 
-    grid-template-rows: auto; 
-    position: fixed;
-    left: 98px;
-    top: 100px;
-    width: 360px;
-    height: 520px;
-    background-color: #0b142f;
-    color: #fff;
-    padding: 20px;
-    box-sizing: border-box;
-    border-radius: 10px; 
-    margin-top: 7rem;
-    
-    
-}
-
-.FormularioSuporte input {
-    width: 100%; 
-    height: 40px;
-    margin-bottom: 10px; 
-    color: #000;
+button:hover {
+    background-color: #8f2014;
     border-radius: 5px;
-    
 }
 
-.Formulario ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.Formulario li {
-    margin-bottom: 10px;
-}
-
-.Formulario a {
-    text-decoration: none;
-    color: #fff;
-}
-
-#descricao {
-    border-radius: 5px;
-    height: 160px;
-    width: 100%;
-
-}
-
-
-.fundo {
-    background: url(../assets/images/bg-suporte-md2.jpg);
+.button-container {
     display: flex;
-    width: 100vw;
-    height: 80vh;
-    background-size:cover;
-    background-repeat: no-repeat;
-    align-items: bottom;
 }
 
-@media (max-width: 700px) {
-    .fundo {
-        background-size: 120%;
-        background-position-y: bottom;
+#button-voltar {
+    width: 15%;
+    background-color: #E53420;
+    color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 30px;
+    margin-right: 5px;
+}
 
-    }
+#button-enviar {
+    width: 85%;
+    background-color: #E53420;
+    color: #FFF;
+    font-weight:bold;
+    border:none;
+    border-radius:5px;
+    font-size:20px;
+    margin-top: 30px;
+    margin-left: 5px;
 }
