--- a/Web/css/Login-usuario.css
+++ b/Web/css/Login-usuario.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: "Montserrat";
     src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
@@ -6,25 +5,27 @@
 
 
 .banner {
- background: url(../assets/images/Imagem-login.jpeg);
- width: 100vw;
- height: 100vh;
- background-size: cover;
- display: flex;
+    background: url(../assets/images/Imagem-login.jpeg);
+    width: 100vw;
+    height: 100dvh;
+    background-size: cover;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
 }
 
 .controlador-login {
     height: 175px;
     padding: 15px;
-    margin-bottom: 15px;
 }
 
 .menu-login {
-    width: 450px;
+    width: 425  px;
     height: 400px;
     background-color: aliceblue;
     border-radius: 20px;
 }
+
 .controlador-login input {
     width: 320px;
     height: 35px;
@@ -36,7 +37,6 @@
     position: relative; 
 }
 
-
 .input-senha {
     display:flex;
     
@@ -47,7 +47,7 @@
     height: 50px;
     border-radius: 10px;
     justify-content: center;
-    margin-left: 137px;
+    margin: 0 auto 0 auto;
     padding-top: 10px;
     background-color: #e54320;
     border: 1px solid black;
@@ -59,7 +59,8 @@
    height: 50px;
    border-radius: 10px;
    justify-content: center;
-   margin-left: 137px;
+   margin-left: auto;
+   margin-right: auto;
    margin-top: 20px;
    padding-top: 10px;
    background-color: #e54320;
@@ -70,8 +71,11 @@
 .input-login {
     margin: 0px;
 }
+
 .texto-cadastro {
-    margin-left: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .campos {
@@ -85,20 +89,12 @@
 }
 
 .corpo {
+    margin-top: 45%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: fixed;
-    background-color: rgba(0, 0,0,.5);
+    justify-content: center;
 }
 
-.texto-cadastro{
-    padding-right: 15px;
-}
 @media only screen and (max-width: 768px) {
   .banner {
     background-size: 150%;
@@ -107,14 +103,15 @@
     background-position: 35%;
   }
   .menu-login {
-    width: 400px;
+    width: 380px;
     height: 400px;
-    background-color: aliceblue;
-    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+
 }
 .controlador-login {
     width: 250px;
     height: 190px;
+    margin-bottom: 15px;
 }
 
 .controlador-login label{
@@ -125,6 +122,7 @@
     font-size: small;
     width: 350px;
     height:10;
+
 }
 
 .campos {
@@ -141,9 +139,6 @@
 .input-login {
     margin: 0px;
 }
-.texto-cadastro {
-    margin-left: 15px;
-}   
 
 #btn-logar {
     display: flex;
@@ -151,7 +146,6 @@
     height: 50px;
     border-radius: 10px;
     justify-content: center;
-    margin-left: 130px;
     margin-bottom: 10px;
     padding-top: 10px;
     background-color: #e54320;
@@ -165,7 +159,6 @@
     height: 50px;
     border-radius: 10px;
     justify-content: center;
-    margin-left: 130px;
     margin-top: 0px;
     padding-top: 10px;
     background-color: #e54320;
@@ -176,7 +169,8 @@
     margin: 0px;
 }
 .texto-cadastro {
-    margin-left: 130px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
  
