--- a/Web/css/Suporte.css
+++ b/Web/css/Suporte.css
@@ -6,10 +6,7 @@
 .banner {
     height: 100vh;
     width: 100%;
-    background: url(../assets/images/pexels-photoscom-93398.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom;
+
     overflow: auto;
     border-top: 1px solid;
     height: 100vh;
@@ -17,7 +14,7 @@
 }
 
 .container-suporte {
-    display: flex;
+    /* display: flex; */
     height: (100vh - 163px);
     margin-top: 140px;
     width: 100vw;
@@ -28,7 +25,7 @@
 .box {
     width: 422px;
     height: 531px;
-    background-color: #FFF;
+    background-color: #0b142f;
     border-radius: 10px;
     flex-direction: column;
     padding: 20px 50px 20px 50px;   
@@ -38,9 +35,14 @@
     height: 405px;
 }
 
+.info-boxes-suporte label, #title-box {
+    color: #FFF;
+
+    }
+
 #box-finalizar-suporte {
-    display: none;
     padding-top: 28px;
+    display: none;
 }
 
 #title-box {
@@ -120,4 +122,24 @@ button:hover {
     font-size:20px;
     margin-top: 30px;
     margin-left: 5px;
+}
+
+@media (min-width: 1100px) {
+    .container-suporte{
+        margin-left: 350px;
+    }
+
+    .banner {
+        background: url(../assets/images/bg-suporte-md2.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+    }
+
+}
+
+@media (max-width: 1100px) {
+    .container-suporte{
+        display: flex;
+    }
 }
