--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -3,6 +3,10 @@
     src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
+* {
+    font-family: "Montserrat", sans-serif;
+}
+
 .banner {
     height: 100vh;
     width: 100%;
@@ -25,7 +29,7 @@
 
 #buscar-opc {
     color: white;
-    background-color: orangered;
+    background-color: #e4321e;
     width: 120px;
     height: 60px;
     border-radius: 15px;
@@ -103,5 +107,7 @@
 @media (max-width: 768px) {
     .texto{
         display: flex;
+        text-align: center;
+        
     }
 }
