--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -37,7 +37,7 @@
 }
 
 .agendar-form {
-    background-color: rgba(189, 189, 189, 0.801);
+    background-color: #FFF;
     margin: 30px;
     padding: 15px 0 15px 0;
     border-radius: 15px;   
