--- a/Web/css/faq.css
+++ b/Web/css/faq.css
@@ -25,7 +25,7 @@
     padding-left: 50px;
     background-color: rgb(245, 243, 243);
     width: 80vw;
-    border-left: #FF4500;
+    border-left: #e4321e;
     border-style: solid;
 }
 
