--- a/Web/css/perfil.css
+++ b/Web/css/perfil.css
@@ -38,7 +38,7 @@
 }
 
 #btn-logout {
-    background-color:#E53420;
+    background-color:#e4321e;
     color: #FFF;
     height: 50px;
     width: 100px;
