--- a/Web/css/cadastro.css
+++ b/Web/css/cadastro.css
@@ -67,7 +67,7 @@ button {
 }
 
 #button-continuar {
-    background-color: #E53420;
+    background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
     border:none;
@@ -77,7 +77,7 @@ button {
 }
 
 button:hover {
-    background-color: #8f2014;
+    background-color: #e4321e;
     border-radius: 5px;
 }
 
@@ -88,7 +88,7 @@ button:hover {
 
 #button-voltar {
     width: 15%;
-    background-color: #E53420;
+    background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
     border:none;
@@ -100,7 +100,7 @@ button:hover {
 
 #button-cadastrar {
     width: 85%;
-    background-color: #E53420;
+    background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
     border:none;
