--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -8,7 +8,7 @@
 }
 
 .banner {
-    height: 100vh;
+    height: 97vh;
     width: 100%;
     background: url("../assets/images/bg-home-sm.jpg");
     background-size: cover;
@@ -37,7 +37,7 @@
 }
 
 .agendar-form {
-    background-color: #FFF;
+    background-color: white;
     margin: 30px;
     padding: 15px 0 15px 0;
     border-radius: 15px;   
@@ -46,6 +46,7 @@
 .inputs {
     gap: 18px;
     align-items: center;
+    background-color: #f5F5F5;
 }
 
 #estado-uf {
@@ -53,6 +54,7 @@
     height: 50px;
     border-radius: 10px;
     font-weight: 620;
+
 }
 
 .inputs input {
@@ -62,6 +64,7 @@
     border-radius: 10px;
     padding: 8px;
     margin-left: 20px;
+    background-color: white;
 }
 
 .agendar-form label {
@@ -72,6 +75,22 @@
     height: 50px;
     border-radius: 10px;
 }
+
+.footer {
+    width: 100%;
+    height: 10vh;
+    background-color: #0b142f;
+    color: rgb(104, 104, 104);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer-icons {
+    display: flex;
+}
+
 
 @media (min-width: 768px) {
     .banner{
