--- a/Web/css/index.css
+++ b/Web/css/index.css
@@ -41,19 +41,52 @@
     margin: 30px;
     padding: 15px 0 15px 0;
     border-radius: 15px;   
+    box-shadow: 3px 2px 2px #8a8a8a;
+    display: flex;
+    justify-content: space-evenly;
+    height: 100%;
 }
 
 .inputs {
     gap: 18px;
     align-items: center;
-    background-color: #f5F5F5;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+}
+
+.form-um {
+    height:100%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10px;
+}
+
+.form-dois {
+    width:40%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.buscar-btn {
+    width: 15%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #estado-uf {
     width: 50px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 5px;
     font-weight: 620;
+    background-color: #aaaaaa;
+    border: 1px solid #bbb;
 
 }
 
@@ -61,10 +94,12 @@
     font-weight: 500;
     width: 200px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 8px;
     margin-left: 20px;
-    background-color: white;
+    background-color: #f5f5f5;
+    box-shadow: 3px 2px 2px #aaaaaa;
+    border: 1px solid #bbb;
 }
 
 .agendar-form label {
@@ -73,22 +108,10 @@
 
 .uf-estado {
     height: 50px;
-    border-radius: 10px;
-}
-
-.footer {
-    width: 100%;
-    height: 10vh;
-    background-color: #0b142f;
-    color: rgb(104, 104, 104);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.footer-icons {
-    display: flex;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    box-shadow: 3px 2px 2px #aaaaaa;
+    border: 1px solid #bbb;
 }
 
 
