--- a/Web/css/agendar.css
+++ b/Web/css/agendar.css
@@ -14,7 +14,7 @@
     width: 100vw;
 }
 
-.container-cadastro {
+.container-agendar {
     display: flex;
     height: (100vh - 163px);
     margin-top: 80px;
@@ -34,13 +34,8 @@
     display: flex;
 }
 
-#box-finalizar-cadastro {
+#box-continuar {
     display: flex;
-}
-
-#box-finalizar-cadastro {
-    display: none;
-    padding-top: 28px;
 }
 
 #title-box {
@@ -50,13 +45,13 @@
     padding-bottom: 20px;
 }
 
-.info-boxes-cadastro {
+.info-boxes {
     display: flex;
     flex-direction: row;
 }
 
-.info-boxes-cadastro input {
-    width: 50%;
+.info-boxes input {
+    width: 100%;
     height: 59px;
     border-radius: 5px;
     border: 1px solid #bbb;
@@ -90,45 +85,8 @@ button:hover {
     border-radius: 5px;
 }
 
-.button-container {
-    display: flex;
-
-}
-
-#button-voltar {
-    width: 15%;
-    background-color: #E53420;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;
-    margin-right: 5px;
-}
-
-#button-cadastrar {
-    width: 85%;
-    background-color: #E53420;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;
-    margin-left: 5px;
-}
-
 .button-continuar {
     width: 322px;
     height: 50px;
     font-size: large;
-}
-
-.checkbox_class {
-    margin: 18px 0px 5px 0;
-}
-
-#termos-de-uso {
-    color:rgb(43, 9, 235);;
 }
