--- a/Web/css/Login-usuario.css
+++ b/Web/css/Login-usuario.css
@@ -18,22 +18,21 @@
 }
 
 .controlador-login {
-    height: 175px;
-    padding: 15px;
+    height: 200px;
+    padding: 20px;
 }
 
 .menu-login {
     width: 422px;
-    height: 405px;
+    height: 422px;
     background-color: #FFF;
     border-radius: 10px;
 }
 
 .controlador-login input {
-    width: 320px;
-    height: 35px;
+    width: 360px;
+    height: 50px;
     padding: 25px;
-    margin-top: 10px;
     background-color: #F5F5F5;
     border: 1px solid #bbb;
 }
@@ -43,14 +42,13 @@
 }
 
 .input-senha {
-    display:flex;
-    
+    display:flex;    
 }
  #btn-logar {
     display: flex;
-    width: 150px;
+    width: 322px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 5px;
     justify-content: center;
     margin: 0 auto 0 auto;
     padding-top: 10px;
@@ -60,9 +58,9 @@
 
 #btn-cadastrar {
    display: flex;
-   width: 150px;
+   width: 322px;
    height: 50px;
-   border-radius: 10px;
+   border-radius: 5px;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
@@ -73,9 +71,7 @@
 
 }
 
-.input-login {
-    margin: 0px;
-}
+
 
 .texto-cadastro {
     display: flex;
@@ -98,6 +94,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.logar-senha {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.logar-email {
+    display: flex;
+    flex-direction: column;
+    color: black;
 }
 
 @media only screen and (max-width: 768px) {
@@ -130,17 +138,10 @@
     border-radius: 5px;
     border: 1px solid #bbb;
     background-color: #F5F5F5;
-    padding: 0 10px;
     margin: 15px;
     margin-left: 0  
 
 }
-
-.credencial {
-    display: flex;
-    flex-direction: column;
-}
-
 
 .campos {
     width: 100%;
