--- a/docs/css/Suporte.css
+++ b/docs/css/Suporte.css
@@ -25,7 +25,7 @@
 .box {
     width: 422px;
     height: 531px;
-    background-color: #0b142f;
+    background-color: #FFF;
     border-radius: 10px;
     flex-direction: column;
     padding: 20px 50px 20px 50px;   
@@ -50,6 +50,7 @@
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 20px;
+    color: black;
 }
 
 .info-boxes-suporte input {
@@ -76,7 +77,7 @@ button {
 }
 
 #button-continuar {
-    background-color: #E53420;
+    background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
     border:none;
@@ -92,7 +93,7 @@ button {
 }
 
 button:hover {
-    background-color: #8f2014;
+    background-color: #e4321e;
     border-radius: 5px;
 }
 
@@ -102,7 +103,7 @@ button:hover {
 
 #button-voltar {
     width: 15%;
-    background-color: #E53420;
+    background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
     border:none;
@@ -110,17 +111,17 @@ button:hover {
     font-size:20px;
     margin-top: 30px;
     margin-right: 5px;
-}
+}   
 
 #button-enviar {
     width: 85%;
-    background-color: #E53420;
+    background-color: #e4321e;
     color: #FFF;
     font-weight:bold;
     border:none;
     border-radius:5px;
     font-size:20px;
-    margin-top: 30px;
+    margin-top: 30px;   
     margin-left: 5px;
 }
 
@@ -130,10 +131,14 @@ button:hover {
     }
 
     .banner {
-        background: url(../assets/images/bg-suporte-md2.jpg);
+        background: url(../assets/images/Suporte_siuuu.jpg);
+        width: 100vw;
+        height: 100dvh;
         background-size: cover;
-        background-repeat: no-repeat;
-        background-position: right bottom;
+        display: flex;
+        flex-direction: column;
+        align-items: center;   
+
     }
 
 }
