--- a/docs/css/recuperacao.css
+++ b/docs/css/recuperacao.css
@@ -18,6 +18,11 @@
     height: 175px;
     padding: 15px;
 }
+.recuperar-email {
+    display: flex;
+    flex-direction: column;
+    color: black;
+}
 
 .menu-login {
     width: 425 px;
@@ -39,14 +44,16 @@
 
 #btn-recuperar {
     display: flex;
-    width: 150px;
+    width: 322px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 5px;
     justify-content: center;
-    margin: 0 auto 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 10px;
-    background-color: #e54320;
-    border: 1px solid black;
+    background-color: #e4321e;
+    color: #FFF; 
+
 }
 
 .input-login {
@@ -127,8 +134,7 @@
         justify-content: center;
         margin-bottom: 10px;
         padding-top: 10px;
-        background-color: #e54320;
-        border: 1px solid black;
+        background-color: #e4321e;
     }
 
     .texto-cadastro {
