Responsabilidade no tela de login

--- a/docs/css/user-login.css
+++ b/docs/css/user-login.css
@@ -110,21 +110,38 @@
 
 @media only screen and (max-width: 768px) {
   .banner {
-    background-size: 150%;
+    background-size: 100%;
     background-repeat: no-repeat;
     background-size: cover;   
-    background-position: 35%;
+    background-position: 35%;   
   }
   .menu-login {
-    width: 380px;
-    height: 400px;
-
+    width: 450px;
+    height: 450px;
 }
-.controlador-login {
+
+.logar-senha {
     width: 250px;
-    height: 190px;
-    margin-bottom: 15px;
-    display: flex;
+    height: 75px;
+}
+
+.logar-email{
+  
+.logar-email input {
+    height: 20px;
+    width: 220px;
+}
+.logar-senha input {
+    height: 20px;
+    width: 220px;
+}
+
+
+.controlador-login {
+    width: 235px;
+    height: 175px;
+    margin-bottom: 10px;
+    display: flex;  
     flex-direction: column;
 }
 
@@ -133,8 +150,8 @@
 }
 
 .controlador-login input {
-    width: 322px;
-    height: 59px;
+    width: 100%;
+    height: 20px;
     border-radius: 5px;
     border: 1px solid #bbb;
     background-color: #F5F5F5;
@@ -150,7 +167,7 @@
 }
 
 .campos span {
-    font-size: medium;
+    font-size: large;
     margin-top: 0px;
 }
 
@@ -160,8 +177,8 @@
 
 #btn-logar {
     display: flex;
-    width: 150px;
-    height: 50px;
+    width: 125px;
+    height: 45px;
     border-radius: 10px;
     justify-content: center;
     margin-bottom: 10px;
@@ -173,8 +190,8 @@
 
 #btn-cadastrar {
     display: flex;
-    width: 150px;
-    height: 50px;
+    width: 125px;
+    height: 45px;
     border-radius: 10px;
     justify-content: center;
     margin-top: 0px;
@@ -183,13 +200,9 @@
     border: 1px solid black;
 }
 
-.input-login {
-    margin: 0px;
-}
 .texto-cadastro {
     margin-left: auto;
     margin-right: auto;
 }
 
  
-  }
