--- a/docs/css/suporte.css
+++ b/docs/css/suporte.css
@@ -3,6 +3,10 @@
     src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
+* {
+    font-family: "Montserrat", sans-serif;
+}
+
 .banner {
     height: 100vh;
     width: 100%;
